# D-Sdf

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dub.json
.github/workflows/: ci.yml
csrc/: msvc_compat.h  sdf_c.cpp
examples/: sdf_cube.d
include/: sdf_c.h
source/sdf/: c.d
